RESOLVED FIXED260656
jsfiddles cannot get access to feature policy gated features like camera
https://bugs.webkit.org/show_bug.cgi?id=260656
Summary jsfiddles cannot get access to feature policy gated features like camera
youenn fablet
Reported 2023-08-24 05:50:05 PDT
jsfiddles cannot get access to feature policy gated features like camera
Attachments
Radar WebKit Bug Importer
Comment 1 2023-08-24 05:50:18 PDT
youenn fablet
Comment 2 2023-08-24 05:53:48 PDT
EWS
Comment 3 2023-08-25 00:46:52 PDT
Committed 267266@main (54bc44e65517): <https://commits.webkit.org/267266@main> Reviewed commits have been landed. Closing PR #17012 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.