Cherry-pick 267266@main (54bc44e65517). https://bugs.webkit.org/show_bug.cgi?id=260656

jsfiddles cannot get access to feature policy gated features like camera
    https://bugs.webkit.org/show_bug.cgi?id=260656
    rdar://114378082

    Reviewed by Eric Carlson and Chris Dumez.

    https://commits.webkit.org/265641@main tightened feature policy parsing and aligned it with spec.
    This was known to not work for some websites, like jsfiddle.
    Add a temporary quirk to fix jsfiddle.
    Manually tested.

    * Source/WebCore/html/FeaturePolicy.cpp:
    (WebCore::updateList):
    * Source/WebCore/page/Quirks.cpp:
    (WebCore::Quirks::shouldStarBeFeaturePolicyDefaultValue const):
    * Source/WebCore/page/Quirks.h:

    Canonical link: https://commits.webkit.org/267266@main